@@ -3,6 +3,7 @@ Change log for Bos Wars
 
 Development version:
 - Add new defeat background graphic (Johannes Engelhardt)
+- Quick drawing in the main menus (Jimmy Salmon)
 - Added patch support to the editor (Jimmy Salmon)
 - Add the heli unit (Johannes Engelhardt and Francois Beerten)
 - Add the big gun turret (Johannes Engelhardt and Francois Beerten)
